--- a/_config.yml
+++ b/_config.yml
@@ -36,10 +36,10 @@ social:
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   #name: your_full_name
   #email: example@domain.com # change to your email address
-  #links:
+  links:
     # The first element serves as the copyright owner's link
   #  - https://twitter.com/username # change to your twitter homepage
-  #  - https://github.com/username # change to your github homepage
+    - https://github.com/GrimmZ04 # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -63,7 +63,7 @@ google_analytics:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode: # [light|dark]
+theme_mode: dark # [light|dark]
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
@@ -116,7 +116,8 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+baseurl: 
+#"https://grimmz04.github.io/"
 
 # ------------ The following options are not recommended to be modified ------------------
 
