--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ twitter:
   username: GrimmZ04 # change to your twitter username
 
 youtube:
-  username: @GrimmZ04
+  username: "@GrimmZ04"
 
 social:
   # Change to your full name.
